# gendiff

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml
gendiff/: __init__.py  cli.py  constants.py  consts.py  diff.py  format.py  logic.py  main.py  parser.py
gendiff/format/: constants.py  consts.py  formatters.py  json_format.py  plain.py  stylish.py  utils.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_generate_diff.py
tests/fixtures/answers/: json_plain_empty.txt  json_plain_plain.txt  json_recursive.txt  plain.txt  plain_plain_empty.txt  plain_plain_plain.txt  stylish_plain_empty.txt
tests/fixtures/json/: invalid.json  plain1.json
tests/fixtures/yaml/: invalid.yml  plain1.yml
